--- a/requirements.txt
+++ b/requirements.txt
@@ -10,28 +10,28 @@ aiofiles==0.7.0
 beautifulsoup4==4.9.3
 deprecation==2.1.0
 dnspython==2.1.0; python_version >= '3.6'
-email-validator==1.1.2
+email-validator==1.1.3
 fastapi-profiler==1.0.0
-fastapi==0.65.1
+fastapi==0.66.0
 greenlet==1.1.0; python_version >= '3'
 idna==3.2; python_version >= '3.5'
 itsdangerous==2.0.1
 lxml==4.6.3
 mysqlclient==2.0.3
-numpy==1.20.3; python_version >= '3.7'
-packaging==20.9; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-pandas==1.2.4
-pillow==8.2.0; python_version >= '3.6'
+numpy==1.21.0; python_version >= '3.7'
+packaging==21.0; python_version >= '3.6'
+pandas==1.3.0
+pillow==8.3.1; python_version >= '3.6'
 pydantic==1.8.2; python_full_version >= '3.6.1'
 pyinstrument-cext==0.2.4
 pyinstrument==3.4.2; python_version >= '3.6'
 pyparsing==2.4.7; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
-python-dateutil==2.8.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pytz==2021.1
-reportlab==3.5.67
+reportlab==3.5.68
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 soupsieve==2.2.1; python_version >= '3'
-sqlalchemy==1.4.17
+sqlalchemy==1.4.20
 starlette==0.14.2; python_version >= '3.6'
 typing-extensions==3.10.0.0
 ujson==4.0.2
