--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ dnspython==2.1.0; python_version >= '3.6'
 email-validator==1.1.3
 fastapi-profiler==1.0.0
 fastapi==0.68.1
-greenlet==1.1.1; python_version >= '3' and platform_machine in 'x86_64 X86_64 aarch64 AARCH64 ppc64le PPC64LE amd64 AMD64 win32 WIN32'
+greenlet==1.1.1; python_version >= '3' and platform_machine == 'arch64' or (platform_machine == 'ppc64le' or (platform_machine == 'x86_64' or (platform_machine == 'amd64' or (platform_machine == 'win32' or platform_machine == 'WIN32'))))
 idna==3.2; python_version >= '3.5'
 itsdangerous==2.0.1
 lxml==4.6.3
@@ -30,7 +30,7 @@ pytz==2021.1
 reportlab==3.6.1
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 soupsieve==2.2.1; python_version >= '3.6'
-sqlalchemy==1.4.23
+sqlalchemy==1.4.24
 starlette==0.14.2; python_version >= '3.6'
 typing-extensions==3.10.0.2
-ujson==4.1.0
+ujson==4.2.0
