--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,7 +71,7 @@ classroom_test:
 build:
   stage: build
   before_script:
-    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+    - echo "$CI_REGISTRY_PASSWORD" | docker login $CI_REGISTRY --username "$CI_REGISTRY_USER" --password-stdin
   script:
     - docker build --build-arg=BRANCH="${CI_COMMIT_BRANCH}" --build-arg=COMMIT="${CI_COMMIT_SHA}" --build-arg=TAG="${CI_COMMIT_TAG}" --build-arg=USER="${GITLAB_USER_NAME}" -t "${REF_CONTAINER}" .
     - docker push "${REF_CONTAINER}"
@@ -79,7 +79,7 @@ build:
 release:
   stage: release
   before_script:
-    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+    - echo "$CI_REGISTRY_PASSWORD" | docker login $CI_REGISTRY --username "$CI_REGISTRY_USER" --password-stdin
   script:
     - docker pull "${REF_CONTAINER}"
     - docker tag "${REF_CONTAINER}" "${RELEASE_CONTAINER}"
