--- a/classroom/package.json
+++ b/classroom/package.json
@@ -62,27 +62,27 @@
     "@types/jasmine": "^3.10.3",
     "@types/jasminewd2": "^2.0.10",
     "@types/node": "^17.0.21",
-    "@typescript-eslint/eslint-plugin": "^5.12.1",
-    "@typescript-eslint/parser": "^5.12.1",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
     "ajv": "^8.10.0",
     "ajv-keywords": "^5.1.0",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.4.0",
     "eslint-formatter-gitlab": "^3.0.0",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jsdoc": "^37.9.5",
+    "eslint-plugin-jsdoc": "^37.9.6",
     "eslint-plugin-prefer-arrow": "1.2.3",
     "eslint-plugin-prettier": "^4.0.0",
     "jasmine-core": "^4.0.1",
     "jasmine-spec-reporter": "^7.0.0",
-    "karma": "^6.3.16",
+    "karma": "^6.3.17",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "^2.2.0",
     "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
     "prettier": "^2.5.1",
     "protractor": "~7.0.0",
-    "ts-node": "^10.5.0",
-    "typescript": "~4.5.5"
+    "ts-node": "^10.6.0",
+    "typescript": "^4.6.2"
   }
 }
