--- a/classroom/package.json
+++ b/classroom/package.json
@@ -16,7 +16,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --output-hashing none",
-    "build:docuscope": "ng build --base-href=./ --output-hashing none",
+    "build:docuscope": "ng build --base-href=./ --output-hashing none --configuration=prod",
     "build_dev": "ng build --base-href=/classroom/ --output-hashing none",
     "build:deploy": "ng build --base-href=/docuscope/classroom/ --output-hashing none --configuration=deploy",
     "test": "ng test --code-coverage=true",
@@ -28,18 +28,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^13.3.8",
+    "@angular/animations": "^13.3.9",
     "@angular/cdk": "~13.3.7",
-    "@angular/common": "^13.3.8",
-    "@angular/compiler": "^13.3.8",
-    "@angular/core": "^13.3.8",
-    "@angular/forms": "^13.3.8",
+    "@angular/common": "^13.3.9",
+    "@angular/compiler": "^13.3.9",
+    "@angular/core": "^13.3.9",
+    "@angular/forms": "^13.3.9",
     "@angular/material": "^13.3.7",
-    "@angular/platform-browser": "^13.3.8",
-    "@angular/platform-browser-dynamic": "^13.3.8",
-    "@angular/router": "^13.3.8",
+    "@angular/platform-browser": "^13.3.9",
+    "@angular/platform-browser-dynamic": "^13.3.9",
+    "@angular/router": "^13.3.9",
     "angular-split": "^13.2.0",
-    "core-js": "^3.22.5",
+    "core-js": "^3.22.6",
     "d3": "^7.4.4",
     "rxjs": "^7.5.5",
     "rxjs-compat": "^6.6.7",
@@ -48,29 +48,29 @@
     "zone.js": "^0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.3.5",
+    "@angular-devkit/build-angular": "^13.3.6",
     "@angular-eslint/builder": "^13.2.1",
     "@angular-eslint/eslint-plugin": "^13.2.1",
     "@angular-eslint/eslint-plugin-template": "^13.2.1",
     "@angular-eslint/schematics": "13.2.1",
     "@angular-eslint/template-parser": "^13.2.1",
-    "@angular/cli": "^13.3.5",
-    "@angular/compiler-cli": "^13.3.8",
-    "@angular/language-service": "^13.3.8",
-    "@types/d3": "^7.1.0",
+    "@angular/cli": "^13.3.6",
+    "@angular/compiler-cli": "^13.3.9",
+    "@angular/language-service": "^13.3.9",
+    "@types/d3": "^7.4.0",
     "@types/google.visualization": "^0.0.68",
     "@types/jasmine": "^4.0.3",
     "@types/jasminewd2": "^2.0.10",
-    "@types/node": "^17.0.33",
-    "@typescript-eslint/eslint-plugin": "^5.23.0",
-    "@typescript-eslint/parser": "^5.23.0",
+    "@types/node": "^17.0.35",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
     "ajv": "^8.11.0",
     "ajv-keywords": "^5.1.0",
-    "eslint": "^8.15.0",
+    "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-formatter-gitlab": "^3.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsdoc": "^39.2.9",
+    "eslint-plugin-jsdoc": "^39.3.2",
     "eslint-plugin-prefer-arrow": "1.2.3",
     "eslint-plugin-prettier": "^4.0.0",
     "jasmine-core": "^4.1.1",
@@ -82,7 +82,7 @@
     "karma-jasmine-html-reporter": "^1.7.0",
     "prettier": "^2.6.2",
     "protractor": "~7.0.0",
-    "ts-node": "^10.7.0",
+    "ts-node": "^10.8.0",
     "typescript": "^4.6.4"
   }
 }
