--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ pylint:
     - python -m pip install --user --quiet pipenv
   script:
     - PIPENV_VENV_IN_PROJECT=1 python -m pipenv install --dev
-    - python -m pipenv run pylint app
+    - PIPENV_VENV_IN_PROJECT=1 python -m pipenv run pylint app
   allow_failure: true
 
 classroom_lint:
