--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,7 @@ pylint:
     - python -m pip install --upgrade --quiet pip
     - python -m pip install --user --quiet pipenv
   script:
+    - sed -i '/\"markers\":\ \"python_version/d' Pipfile.lock # remove markers
     - PIPENV_VENV_IN_PROJECT=1 python -m pipenv install --dev
     - PIPENV_VENV_IN_PROJECT=1 python -m pipenv run pylint app
   allow_failure: true
