--- a/classroom/.eslintrc.json
+++ b/classroom/.eslintrc.json
@@ -42,7 +42,9 @@
         ],
         "@typescript-eslint/no-unused-vars": [
           "error",
-          { "argsIgnorePattern": "^_" }
+          {
+            "argsIgnorePattern": "^_"
+          }
         ]
       }
     },
