--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,9 @@ lxml = "*"
 pydantic = {extras = ["dotenv"], version = "*"}
 aiomysql = "*"
 hypercorn = "*"
+python-multipart = "*"
+python-jose = {extras = ["cryptography"], version = "*"}
+pydantic-settings = "*"
 
 [dev-packages]
 pylint = "*"
