--- a/classroom/package.json
+++ b/classroom/package.json
@@ -24,7 +24,8 @@
     "lint": "eslint -c .eslintrc.json src",
     "prettier": "prettier -w src",
     "e2e": "ng e2e",
-    "dep_check": "npx dpdm src"
+    "dep_check": "npx dpdm src",
+    "version": "node getVersion.mjs"
   },
   "private": true,
   "dependencies": {
