--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,10 +1,8 @@
 name: Create and publish DocuScope Classroom docker image.
 
-# Configures this workflow to run every time a change is pushed to the branch called `release`.
+# Configures this workflow to run every time a new version is tagged.
 on:
   push:
-    branches: 
-      - 'release'
     tags:
       - 'v*'
 
